--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
     "core-js": "^2.6.2",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "^6.1.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.27"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.27",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "^7.2.0",
     "@angular/language-service": "^7.2.0",
-    "typescript": "3.2.2",
-    "@angular-devkit/build-angular": "~0.12.0"
+    "typescript": "3.2.2"
   }
 }
