--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "ngx-cookie-service": "^2.1.0",
     "rxjs": "^6.1.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.27",
+    "zone.js": "^0.8.27"
+  },
+  "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "^7.2.0",
