--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "core-js": "^2.6.2",
     "ngx-cookie-service": "^2.1.0",
+    "node-sass": "^4.11.0",
     "rxjs": "^6.1.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.27"
